# ShapiroWilk-NonLocalMeans-CUDA

./: CMakeLists.txt  LICENSE  main.cpp  readme.md  test.cpp
NonLocalMeans/: NonLocalMeans.ncu-proj
apps/: CMakeLists.txt
apps/benchmark/: CMakeLists.txt  benchmark.cpp
apps/cnlm/: CMakeLists.txt  cnlm.cpp
apps/cnlm_cuda/: CMakeLists.txt  cnlmcuda.cpp
apps/cuTest/: CMakeLists.txt  cuTest.cu
apps/eval/: CMakeLists.txt  eval.cpp
apps/hdnlm/: CMakeLists.txt  fastapprox.cpp  fastapprox.hpp  filter.cpp  filter.hpp  kmeans.cpp  kmeans.hpp  main.cpp  pca.cpp  pca.hpp  utils.cpp  utils.hpp  utils.tpp
apps/hdnlm/matlab code/: box2D.m  box_filter.m  compute_pca.m  fastKmeansapproxinter.m  gauss_filter.m  kmeans_cluster.m  kmeans_recursive.m  nlm_approx.m  young.cpp
apps/original/: CMakeLists.txt  main.cpp
apps/swilk_test/: CMakeLists.txt  swilk.py  swilktest.cpp
apps/swnlm/: CMakeLists.txt  noise.hpp  swilk.cpp  swilk.hpp  swnlm.cpp
apps/swnlm_cuda/: CMakeLists.txt  NewSession1.nvvp  NewSession2.nvvp  swnlmcuda.cpp
apps/test/: CMakeLists.txt  main.cpp
images/: mandril.tif
libs/: CMakeLists.txt
libs/cnlm/: CMakeLists.txt
libs/cnlm/inc/: cnlm.hpp
libs/cnlm/src/: cnlm.cpp
libs/cnlm_cuda/: CMakeLists.txt
libs/cnlm_cuda/inc/: cnlmcuda.cuh
libs/cnlm_cuda/src/: cnlmcuda.cu
libs/common/: CMakeLists.txt
libs/common/inc/: common.hpp
libs/common/src/: common.cpp
libs/cudatest/: CMakeLists.txt  cudatest.cu
libs/cudatest/inc/: cudatest.cuh
libs/swilk/: CMakeLists.txt
libs/swilk copy/: CMakeLists.txt
libs/swilk copy/inc/: swilk.cuh
libs/swilk copy/src/: sort.cuh  swilk.cu  test.cu  test.cuh
libs/swilk/inc/: swilk.cuh
libs/swilk/src/: sort.cu  sort.cuh  swilk.cu
libs/swnlm/: CMakeLists.txt
libs/swnlm/inc/: swnlm.hpp
libs/swnlm/src/: noise.cpp  swilk.cpp  swilk.hpp  swilk_old.cpp  swilkutils.hpp  swnlm.cpp
libs/swnlm_cuda/: CMakeLists.txt
libs/swnlm_cuda/inc/: swnlmcuda.cuh
libs/swnlm_cuda/src/: sort.cuh  swilk.cuh  swilkutils.hpp  swnlmcuda.cu  swnlmcuda_v1.cu
libs/swnlm_cuda_bak/: CMakeLists.txt  y_formulas.txt
libs/swnlm_cuda_bak/inc/: swnlmcuda.cuh  swnlmcuda_backup.cuh
libs/swnlm_cuda_bak/src/: countingsort.cuh  radixsort.cuh  radixsort_old.cuh  radixsort_old2.cuh  swilk.cuh  swnlmcuda.cu  swnlmcuda_backup.cu
libs/swnlm_cuda_old/src/: swilk.cuh  swilkutils.cu
libs/swnlm_cuda_v1/: CMakeLists.txt
libs/swnlm_cuda_v1/inc/: swnlmcuda.cuh
libs/swnlm_cuda_v1/src/: swilk.cu  swnlmcuda.cu
libs/swnlm_cuda_v2/: CMakeLists.txt
libs/swnlm_cuda_v2/src/: swilk.cpp  swilkutils.cpp  swilkutils.cuh
libs/swnlm_cuda_v3/: CMakeLists.txt
libs/swnlm_cuda_v3/src/: sort.cuh  swilk.cuh  swnlmcuda.cu
libs/swnlm_cuda_v4/: gauss.py
libs/swnlm_cuda_v4/src/: swilk.cuh  swnlmcuda.cu
libs/swnlm_cuda_v5/: CMakeLists.txt
libs/swnlm_cuda_v5/src/: bitonicsort.cuh  sort.cuh  swilk.cuh  swilkutils.cuh  swnlmcuda.cu
libs/utils/: CMakeLists.txt
libs/utils/inc/: utils.hpp
libs/utils/src/: utils.cpp
output/SIPI/misc/: results.csv
output/ThesisImages/: CNLM_GaussKernel.tiff  CNLM_Ni-Nj2*G.tiff  CNLM_Ni-Nj2.tiff  CNLM_Ni.tiff  CNLM_Nj.tiff  CNLM_denoised.tiff  Gblur_NoisyGauss.tiff
output/final/: results.csv
output/polyu/: results.csv
output/quick/: results.csv
output/standard/: results.csv
output/standard2/: results.csv
output/test1/: results.csv
python/: GaussianFilter.py  gaussCdf.py  main.py
python/difference/: difference.py
python/explainfigure/: explainfigure.py
python/gaussianblur/: denoised_sigma=6_k=10.tiff
python/gaussiankernel/: gaussiankernel.py
python/padding/: padding.py
python/polyu/: avgresultspolyu.csv  polyUExecTimes.csv  polyu.py  polyuavg.py
python/radius/: radius.py  test.py
python/resizeImages/: resizeImages.py
python/ssim/: ssim.py
python/swilk/: alnorm.py  swilk.c  swilk.py
